# portfolio_andrei_be

./: Dockerfile  Pipfile  manage.py  pyproject.toml  requirements.txt
home/: models.py
home/migrations/: 0003_homepage_hero_image.py
navigations/: api.py  models.py  serializers.py
navigations/migrations/: 0001_initial.py  0002_alter_links_type.py  0003_rename_type_links_link_type.py  0004_alter_links_link_type.py  0005_alter_links_link_type.py
portfolio_andrei_be/: api.py  urls.py  wsgi.py
portfolio_andrei_be/settings/: base.py  dev.py
portfolio_andrei_be/templates/: base.html
streamfields/: blocks.py
