[tool.poetry]
name = "portfolio_andrei_be"
version = "0.1.0"
description = ""
authors = ["Andrei Teleron <ateleron2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
wagtail = "^2.15.2"
python-decouple = "^3.5"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
